Fix text alignment in h1 style

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ padding: 20px;
 }
 
 h1 {
-text-align: center
+text-align: center;
 }
 
 main { 
